--- a/style.css
+++ b/style.css
@@ -1,43 +1,59 @@
 * {
-    margin: 0px;
-    padding: 0px;
-    color: #333;
-  }
-  body,
-  html {
-    width: 100%;
-    height: 100%;
-  }
-  body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  #app {
-    width: 70%;
-    display: flex;
-    flex-direction: column;
-  }
-  #app input {
-    font-size: 1rem;
-    margin-bottom: 2em;
-    padding: 1% 1%;
-    border-radius: 0.3rem;
-    border: none;
-    border-bottom: solid 0.1rem #87878757;
-    box-shadow: 0.1rem 0.02rem 0.2rem 0.1rem #87878757;
-  }
-  .res {
-    display: flex;
-  }
-  button {
-    cursor: pointer;
-    padding: 0.2%;
-    background: transparent;
-    border-radius: 0.3rem;
-    border: solid 0.1rem #87878757;
-    box-shadow: 0rem 0rem 0.1rem 0.1rem #87878757;
-  }
-  button:hover {
-    padding: 0.25%;
-  }
+  margin: 0px;
+  padding: 0px;
+  color: #333;
+}
+body,
+html {
+  width: 100%;
+  height: 100%;
+}
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#app {
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+}
+#app input {
+  font-size: 1rem;
+  margin-bottom: 2em;
+  padding: 1% 1%;
+  border-radius: 0.3rem;
+  border: none;
+  border-bottom: solid 0.1rem #87878757;
+  box-shadow: 0.1rem 0.02rem 0.2rem 0.1rem #87878757;
+}
+.res {
+  display: flex;
+}
+button {
+  cursor: pointer;
+  padding: 0.2%;
+  background: transparent;
+  border-radius: 0.3rem;
+  border: solid 0.1rem #87878757;
+  box-shadow: 0rem 0rem 0.1rem 0.1rem #87878757;
+}
+button:hover {
+  padding: 0.25%;
+}
+.his {
+  display: flex;
+  width: 100%;
+  margin: 1% 0%;
+  padding: 0.5% 0%;
+  color: #333;
+  font-size: 1.2rem;
+  border-bottom: solid 0.06rem #333;
+}
+.his i {
+  margin-left: 1rem;
+  cursor: pointer;
+}
+.his i:hover {
+  font-size: 1.3rem;
+}
